[+add time, date. Improve look]

--- a/MonitorWaker v0.1/Form1.resx
+++ b/MonitorWaker v0.1/Form1.resx
@@ -117,4 +117,176 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_Home.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAEk5JREFUeF7tnQ+UVNV9x5cYRSWpovsH/6SNzR+DbZrEJIIQXc/xD39mlqhlmx4J
+        7AwKOScNSY+W5jRt3VRjUXYHCjtvFgT2zaKpPaSnpko1/klo/cPuLCgEdt8s2EQQo2ATlEhQd9k3/f7e
+        3Pv2zcyb2dmwC7PM93PO78y8e3/3vjszv++7975335sKQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEII
+        IYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEII
+        IYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCxiT1m7rPqvuXXTUzYsnLgy3WlcE1
+        1tV10e6Zsw0rMKsl+SXJU66EEE1tY+rDwdW7PlNnWLcGY8mlwdbkPbONnpWBWPL+YKxn/pxYzxdqzVfP
+        Vu6EEOHmFutCCGRWwEh+P2BYTwSMnq3BWO/DwWjPt2e19k6fuWrveOVKCKnflDoDvcoXnV7GsH4SjFlH
+        sP08BLQs0LJ7RnDtr85VroQQEUTQSNYFjZ4HIZjXIZQPArGe/xYB1UV7/kS5EUIEmfjLcAyi2QORpDAs
+        +6X0LrOjez6vXAghgnOWLD3R/7WIBcMxq85ILsG85Q+UCyFEzn4FYtZfYgjWqXqV38JWBVr3XKJcCCEC
+        5ic3QChbHKHErGN4f7ecYlbZhBBhVosVhDj2qaHXizdFui9QWYQQIRDbNREi+U817PppRUVqnMoihAjO
+        dZWo1SUimWlYtSqZECLI2jC50CgCkfVgKpmQ8kbObAVjvfMhju70PCR5YM765EdVNiHlxY0b35xQF7Om
+        zja6lwRi1qMQxrtKGCnMQ34xp7X7CuVKyOlHILZ/YqC151OzjeQ0BP1twWjPUrnWEYxZT+J1vysGrxnJ
+        N8TvxqadE1Q1hPiRGicXzYLG7i8HjZ6bEVR34Kh6Z3oFbTIqhoBaj/RNOWZYD2sfHJVXIK3RawjOv4PP
+        N4sxxzerfDBqPZCu39qIbdnfM7AtMjRCWi/eH0KPMJAT/PnMSO5D2fV10d6ZvP5BMpCAkJuSECALMSFt
+        RsD8F4LsVQRNX04gnQ5mWIdhz8lnnR3t+QvYH6mvgpD0Kcw5a/ZciyOw9AQ/RdAczQmisW396FUO4LN1
+        yD0ieF1WZ/TcHoj1XHNLbGe1+hoI8ZIaF4x2fwW9woPoHf7PJ6hK0tDWPhkuIeAtvHail3tKhlR4NZB3
+        L+YWSzD8+1qgNXndbGP35LnreOWbDAPngpdhLUBw7fILwBE1Z9yf7MbrFmde0Nq7IT1PcOz7SGtE/veQ
+        n55btCbnBWK99XVremdiuzawuvuqma17r6iLdn9y5qq9VXMjW89RH4OQkSe9AC+52zeYh2kQ2e9g2xDg
+        /ypHbkyAGySoJaAlmNUuCSl9gmu3n4vg3eAX6MWZ9T7KPxeIWj8IRJNzZ7VYn25sbPyQqp6QsYusPpUj
+        vX/gFzAjudc5ddqy+zo+8ICcljjLJAwr4SsAH4OQDgaM3ntntSQ/q6og5PQFvcBKPyHkmMwlosl5siBP
+        FSXk9GbOyp9fHjCSx30FoUx6jKDR+zXe30CGS2SrfUlTl33rqk57bN63r66A+wpDDOJ5Vh62ptwJGRZN
+        nfbSSFcq1ZwY6GtO2M80b7OX3L899Ycqu/QJxNI39/ib9TMOp8iJAFG8IALJNgimC2L52+Yu+wuNjanS
+        PdMJERz0F4fcEdf7ZeVGyO8FepDLIIblsLf8hCIGkbwH64aYtmTZzuaugSMo++OK1Cka3mPifchPHMra
+        T5frGCu22VdGEqn65YnUJJVETiKN3amzEPDzEOzP+YlkaBu4R+pQ1Z08IBDn2U75DEOwx2assC5S7iVH
+        zdc3TjjvtthEtVkhy0zQ5tVBI/lIXYsVlLS121NnylEq/UXbj0vaAy/YH41s67sK4+HzZPtE2ZRKnYEA
+        uD6SsL/b3DnQjP01NiWON6zoSv2xcsmh6Sl7Ao6wV4i1vGRfrJJdMLG9VOdjslv08pkHuuzLpcz9HfZk
+        lZSXyA5MotU+Vr1sD7myIdqd+oj2X77N/oRKHhaYtP9pU2Igiu/oSK4Q8hv835XfD/v+VqHvdUSBQO7z
+        E4bXAob1Dibry25ZcwqFUttw/vhpi+445yvfmKtSKipDbddUh80PasLxVE2DuUTSnIWVuu0Qv6RBIOe6
+        XzK6bkmTH3jwix84iPTncHRbj/SlTV39dc0vvv8ZEZb4DgV+8FkQxj5dX7bhh92K+h2xesGPXTvoZ5sq
+        2QXpm3R+U1df0cNd1HXIKZewj6qkvDhtV/tAG3cP9Znh85Dr33n8eyr596Jppz1heeL4IrTzZV3ncAzf
+        6yv4zVoi2+zZjY+lRuch43Wrey/D0bao+zcgkg/kyBxotW452QsCx09fdN/Z0xenxM6ZtvBLklYVavum
+        Iw5YdSgelTSIotZtb9TqkrShBJLP4NuHYNuL180QUXNzZ2qxBDWGa+6BQk5h4oc67lc+2+D3HVXMoRQE
+        IsDvR3o/+Kx3quQcmhJ91yLfVn5WsQeQYmjqsKfId4C2/E63ZTiG9nyAXulpVd3IgqAqeKo3jx0NGD1P
+        Iwj/UZaMf3XljvNVdaPCWdMWRbVAzp66yHmczmgLpKDJUasx9SEE/es6DXU/tjxhXy0CkvqxPa8pYT8q
+        AsL7N5q3pypl35qSEchW+xK00RnuyOsDPsO9xi2pDyNvl+MDkTRtS12nskaU2K7URLT/r9Ez9OrPPhxT
+        1YwszrNm1bOcTtD2oJd5PH1txfqrupgVlH9ykjmMLJ9Xu8sg4Pw3h+eWW2VIfxRtalVuJSkQbx34QffL
+        PETqzmbFVvvKppfsa9WmS6kIREDwf0fvC+9/qJJdliNo3fzEwEZJc8pss6OjYfidDOzH0vss1pzGjgbO
+        YsVY8iVPsI+4YS7zNvbxGqw7aPTsRjA794L7+YrpABdKUSDSW+htBMtOqXc4lJJARNzwd+YC2T3ED/7n
+        6EVyutXJ67IPN71oO3dXynep21cq5jR4tFAiedYbpKfSSl0gCJaPudsJewDDqQapu1hKSSBCU0ffFHwm
+        Zz6F78mdsOO9OzFf0ZVa7DiDshOIUF+/6QwE2d3OhNwTrKfCSl0gUg+GAQlvOgIM43T77sh2e2q+IZem
+        1AQioGxM7xPf1Z0ZE/Muu8M7VC5LgWjkPm0E20+8AXuybSwIJNJpfw6B43uVGPs6DGtbkbCds27ZlKJA
+        Vm55+3y0+aCUx+c6gvdqsmz3r0ykMv5VS75L3b5SMdW0k4cKuM3DelbUCNlYEIggZ14QTCtgx3x9HbPX
+        6SGLphQFImBudZverzZ8bytVtgsF4kGul2CSvRwB+JY3iEfTxopANHKVubkzdTPyopHOgT3ZZSCgFuXq
+        UKoCkXVPKPuM3jfqOyArD1SuCwXig4xBg9He6yGWNc59Ip6AHmkbawLJJvIyhl+JATfQIJD3pC0qu3QF
+        ApoTqZDetyydUckZUCBDkhon//aKYFwajFlPBo3kYR2cI2FjXSBC45bU2RCGO0eRdUgqq6QFgnlTg943
+        RL5cJWdAgQwbCMbYMzkY65mPQG0OGMmnEagHdMAO18aCQOQGIATTHfI+H5GuweEWhiqXq2QKZBRMNW1s
+        IX+TLM/wlScZzjZ6vyvDMwTwZth2TP6P6YDOtlIXCOoIoHdIXzfosp9E75ATxDJUwT6d06QI2MPeJdsU
+        yMibatrpgzwwwrmCb/S8gaDu18HtDXChJAWSGFibm2f/EvY49vPvEE13Zt7APbJvzXAEgiA9nA58X3tV
+        FXFIpzmfFcLM8XUN7ctZUqIZbYFg34cjnfZU+R1G0lTTTl/qo90fkWX18uRF72OFSk0gcrsogqy2qWtA
+        VqAO+Pl4DUFmNXf03yhltDV3Hfeuf3rSm6esqADEZ3ovqxzE5O/rNeyzI6uc15a5fomBR3zy0X57h7e+
+        4VhTZ7972wIZAUpHIM7R93kJDlh3WVvC/oVv+lDmc02FnCDjpy9argVyzpRFUyRttASCH/EYjpq74Psj
+        DKXukzVWsk5p2fMp985FQkqLLy4+76zpi28dP23RTdhybuCvXhD/s+qwuR92qLrBnCdp6i/T0gIxklsl
+        zU8gKzvsyZHEwD5sPwUxtOB1SXOif8ayjtTHT9kDAggZbZy/bYgm7wrK362tsa6WNAjkTAjgfdU7bHYc
+        CSGDyClYeaqJPKRAJZ0QVeGNn6sMt9f6Wqjtmqrb132yYognwtQ0mB/3La+sqsH8/AXzHhryiYTVobbP
+        6jLyEAuVXIhxlQvj1+oyFy5cX9TfVcvncsqgLI5EBVcqC9IWvQ9po0om5QDmPFv0/CefVYfMd2pC8dZJ
+        4Q2+TwtBHY1+5bIN9fRiGHl3vuCvDsc3a1/sa8hTnVWh9hmZ9cf/QWUVBG046pZbGM84Ze2HtMXdB9qo
+        kkk5UIxAPLb3vAYz5579YgUyaObPJy5em/OYouEKpCZkPpFRb8h8o2Lx2iEfwJAhkFB8oDK8IedJLV4o
+        kDImQyAN5r1yRs1jf4MAehjW5/qE4xFV1MUrkEmheHRSyKz3Gur9NnqPdgTmMe2HocpqVdxlOAKZdHv7
+        ZAjN1v7aqhaa85VLXjIEAkPbDleHN+R9PhUFUsZ4BZIvKOHzDe2DoPxfleySKZD2vLfrVjeY12s/lHkr
+        e24zHIFAdGu0b1Uo/qx+j+B/SbnkJVsgynZcOjfi+wgoCqSMKUYgF4faPuYGSCj+G5XsUqxABATn69oX
+        c5GMv6QuViAXz2+/UPdG8nrR4rWVeN2ty8pkWrn64gokFP8t9vmaLodeLWeZjECBlDHFCKRqQfwm7QPr
+        UMkuwxEIfPZq30sXxDPOxBUrEPREf6/9pCeRNLzertOqwuaPHcc8aIHg9VBNeOMUvKafaumkxd2HOWgo
+        kDLGK5CaUFudBMOgtdcieO7C5Pdg2se0qxrMP1dFXYoVCI7053qCsT/7FGtRAsEkHEf+X6X9TFvmIpIs
+        wyO04y2Vfhyizvu8Xa9AZHtSxkoG831sZ6w4pkDKmAyBFDTz9UmhjfWqWAZFCQRiQGC3uvWF4i+oHJdi
+        BCKT8ME6zCdUsgPq/Cedh+DPuC3YS7ZABOx742DZ+D4ZxqksCqScKVYgcmRFQG26IGtYJHgFgiB9FttR
+        r1WFzIdQdn9mfe1fVcVdihEI6tumfWTop5Id0LtNknam880jfqeSBT+ByLUZtH2nrhv1PKV7OAqkjEHA
+        uQJRAd3otSo56ofMXk+AvCmBqIo7iJ/OL8L6MV9wnmCfzVACqQxvqNX5CO7dSMpZa4a2mNpHTlOr5Az8
+        BCLIqgF81nd0eX0RkQIpYxBQQ07SBQTTP7tBEmpzVhxrihYIhlU1d2y8TBXLYSiBoCf6D52P9rwmbc+x
+        sNnt+oTMfX5LSfIJRKheGJ8jcxunDnURkQIpYySo9I9fSCATM071mi+rZAfU4R1ifQv1VGlDb3GvmxeO
+        v1s5/8FPq2I5FBKIXMiTybenrqKsKhzPuaGpkEAEpHsOBuZhOXnhblMg5UWxApFFep4gSapkB69Acibp
+        OIIj/wVP2e1X1G/y/QuyggIJxVe5dYTMIxLcBezX2hdDJudWAS/ILygQdULBvfg4eBaPAik7ihGIHL0R
+        lD9zgyTU9ojKcigoECDDKpk0u+UbzCaVlUE+gchk2y0fivdVLnqo8D+ESYCHzVd0XTXhDc6NaZohBQKw
+        /yrkHxisI20USJnhFQiOlK8gKLpdC5kW8n/jDRBYf82CdVep4g5DCURAYH3drQNj++pw+w0qyyWfQCCo
+        uwbLmu0quSAy1NNl8Fn+TSU7YHtIgQjY71T4uBcR02UokNOfxWvP1Pc3IJB2eANgKIMYorqsNqS5Z44K
+        XSisCps/9NT1JnqmG7z1IK1D51eF2hoG6zf36fTKUNuVqrqCyL0hCOa3pQza11cTbg+69YXj7znpQwhE
+        wPzDFZqyDl1PMSuHyRhElqwjaHLPAI2AXRRqn6F2k4MMleCzObtMsYYJ/zpVVVFAAHf51aMNwf+oci0I
+        hmsRv/J+S/8JIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQggh
+        hBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQggh
+        hBBCCCGEEEIIIYQQQgg5ASoq/h+EV1j8d1xqHAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAEk5JREFUeF7tnQ+UVNV9x5cYRSWpovsH/6SNzR+DbZrEJIIQXc/xD39mlqhlmx4J
+        7AwKOScNSY+W5jRt3VRjUXYHCjtvFgT2zaKpPaSnpko1/klo/cPuLCgEdt8s2EQQo2ATlEhQd9k3/f7e
+        3Pv2zcyb2dmwC7PM93PO78y8e3/3vjszv++7975335sKQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEII
+        IYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEII
+        IYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCxiT1m7rPqvuXXTUzYsnLgy3WlcE1
+        1tV10e6Zsw0rMKsl+SXJU66EEE1tY+rDwdW7PlNnWLcGY8mlwdbkPbONnpWBWPL+YKxn/pxYzxdqzVfP
+        Vu6EEOHmFutCCGRWwEh+P2BYTwSMnq3BWO/DwWjPt2e19k6fuWrveOVKCKnflDoDvcoXnV7GsH4SjFlH
+        sP08BLQs0LJ7RnDtr85VroQQEUTQSNYFjZ4HIZjXIZQPArGe/xYB1UV7/kS5EUIEmfjLcAyi2QORpDAs
+        +6X0LrOjez6vXAghgnOWLD3R/7WIBcMxq85ILsG85Q+UCyFEzn4FYtZfYgjWqXqV38JWBVr3XKJcCCEC
+        5ic3QChbHKHErGN4f7ecYlbZhBBhVosVhDj2qaHXizdFui9QWYQQIRDbNREi+U817PppRUVqnMoihAjO
+        dZWo1SUimWlYtSqZECLI2jC50CgCkfVgKpmQ8kbObAVjvfMhju70PCR5YM765EdVNiHlxY0b35xQF7Om
+        zja6lwRi1qMQxrtKGCnMQ34xp7X7CuVKyOlHILZ/YqC151OzjeQ0BP1twWjPUrnWEYxZT+J1vysGrxnJ
+        N8TvxqadE1Q1hPiRGicXzYLG7i8HjZ6bEVR34Kh6Z3oFbTIqhoBaj/RNOWZYD2sfHJVXIK3RawjOv4PP
+        N4sxxzerfDBqPZCu39qIbdnfM7AtMjRCWi/eH0KPMJAT/PnMSO5D2fV10d6ZvP5BMpCAkJuSECALMSFt
+        RsD8F4LsVQRNX04gnQ5mWIdhz8lnnR3t+QvYH6mvgpD0Kcw5a/ZciyOw9AQ/RdAczQmisW396FUO4LN1
+        yD0ieF1WZ/TcHoj1XHNLbGe1+hoI8ZIaF4x2fwW9woPoHf7PJ6hK0tDWPhkuIeAtvHail3tKhlR4NZB3
+        L+YWSzD8+1qgNXndbGP35LnreOWbDAPngpdhLUBw7fILwBE1Z9yf7MbrFmde0Nq7IT1PcOz7SGtE/veQ
+        n55btCbnBWK99XVremdiuzawuvuqma17r6iLdn9y5qq9VXMjW89RH4OQkSe9AC+52zeYh2kQ2e9g2xDg
+        /ypHbkyAGySoJaAlmNUuCSl9gmu3n4vg3eAX6MWZ9T7KPxeIWj8IRJNzZ7VYn25sbPyQqp6QsYusPpUj
+        vX/gFzAjudc5ddqy+zo+8ICcljjLJAwr4SsAH4OQDgaM3ntntSQ/q6og5PQFvcBKPyHkmMwlosl5siBP
+        FSXk9GbOyp9fHjCSx30FoUx6jKDR+zXe30CGS2SrfUlTl33rqk57bN63r66A+wpDDOJ5Vh62ptwJGRZN
+        nfbSSFcq1ZwY6GtO2M80b7OX3L899Ycqu/QJxNI39/ib9TMOp8iJAFG8IALJNgimC2L52+Yu+wuNjanS
+        PdMJERz0F4fcEdf7ZeVGyO8FepDLIIblsLf8hCIGkbwH64aYtmTZzuaugSMo++OK1Cka3mPifchPHMra
+        T5frGCu22VdGEqn65YnUJJVETiKN3amzEPDzEOzP+YlkaBu4R+pQ1Z08IBDn2U75DEOwx2assC5S7iVH
+        zdc3TjjvtthEtVkhy0zQ5tVBI/lIXYsVlLS121NnylEq/UXbj0vaAy/YH41s67sK4+HzZPtE2ZRKnYEA
+        uD6SsL/b3DnQjP01NiWON6zoSv2xcsmh6Sl7Ao6wV4i1vGRfrJJdMLG9VOdjslv08pkHuuzLpcz9HfZk
+        lZSXyA5MotU+Vr1sD7myIdqd+oj2X77N/oRKHhaYtP9pU2Igiu/oSK4Q8hv835XfD/v+VqHvdUSBQO7z
+        E4bXAob1Dibry25ZcwqFUttw/vhpi+445yvfmKtSKipDbddUh80PasLxVE2DuUTSnIWVuu0Qv6RBIOe6
+        XzK6bkmTH3jwix84iPTncHRbj/SlTV39dc0vvv8ZEZb4DgV+8FkQxj5dX7bhh92K+h2xesGPXTvoZ5sq
+        2QXpm3R+U1df0cNd1HXIKZewj6qkvDhtV/tAG3cP9Znh85Dr33n8eyr596Jppz1heeL4IrTzZV3ncAzf
+        6yv4zVoi2+zZjY+lRuch43Wrey/D0bao+zcgkg/kyBxotW452QsCx09fdN/Z0xenxM6ZtvBLklYVavum
+        Iw5YdSgelTSIotZtb9TqkrShBJLP4NuHYNuL180QUXNzZ2qxBDWGa+6BQk5h4oc67lc+2+D3HVXMoRQE
+        IsDvR3o/+Kx3quQcmhJ91yLfVn5WsQeQYmjqsKfId4C2/E63ZTiG9nyAXulpVd3IgqAqeKo3jx0NGD1P
+        Iwj/UZaMf3XljvNVdaPCWdMWRbVAzp66yHmczmgLpKDJUasx9SEE/es6DXU/tjxhXy0CkvqxPa8pYT8q
+        AsL7N5q3pypl35qSEchW+xK00RnuyOsDPsO9xi2pDyNvl+MDkTRtS12nskaU2K7URLT/r9Ez9OrPPhxT
+        1YwszrNm1bOcTtD2oJd5PH1txfqrupgVlH9ykjmMLJ9Xu8sg4Pw3h+eWW2VIfxRtalVuJSkQbx34QffL
+        PETqzmbFVvvKppfsa9WmS6kIREDwf0fvC+9/qJJdliNo3fzEwEZJc8pss6OjYfidDOzH0vss1pzGjgbO
+        YsVY8iVPsI+4YS7zNvbxGqw7aPTsRjA794L7+YrpABdKUSDSW+htBMtOqXc4lJJARNzwd+YC2T3ED/7n
+        6EVyutXJ67IPN71oO3dXynep21cq5jR4tFAiedYbpKfSSl0gCJaPudsJewDDqQapu1hKSSBCU0ffFHwm
+        Zz6F78mdsOO9OzFf0ZVa7DiDshOIUF+/6QwE2d3OhNwTrKfCSl0gUg+GAQlvOgIM43T77sh2e2q+IZem
+        1AQioGxM7xPf1Z0ZE/Muu8M7VC5LgWjkPm0E20+8AXuybSwIJNJpfw6B43uVGPs6DGtbkbCds27ZlKJA
+        Vm55+3y0+aCUx+c6gvdqsmz3r0ykMv5VS75L3b5SMdW0k4cKuM3DelbUCNlYEIggZ14QTCtgx3x9HbPX
+        6SGLphQFImBudZverzZ8bytVtgsF4kGul2CSvRwB+JY3iEfTxopANHKVubkzdTPyopHOgT3ZZSCgFuXq
+        UKoCkXVPKPuM3jfqOyArD1SuCwXig4xBg9He6yGWNc59Ip6AHmkbawLJJvIyhl+JATfQIJD3pC0qu3QF
+        ApoTqZDetyydUckZUCBDkhon//aKYFwajFlPBo3kYR2cI2FjXSBC45bU2RCGO0eRdUgqq6QFgnlTg943
+        RL5cJWdAgQwbCMbYMzkY65mPQG0OGMmnEagHdMAO18aCQOQGIATTHfI+H5GuweEWhiqXq2QKZBRMNW1s
+        IX+TLM/wlScZzjZ6vyvDMwTwZth2TP6P6YDOtlIXCOoIoHdIXzfosp9E75ATxDJUwT6d06QI2MPeJdsU
+        yMibatrpgzwwwrmCb/S8gaDu18HtDXChJAWSGFibm2f/EvY49vPvEE13Zt7APbJvzXAEgiA9nA58X3tV
+        FXFIpzmfFcLM8XUN7ctZUqIZbYFg34cjnfZU+R1G0lTTTl/qo90fkWX18uRF72OFSk0gcrsogqy2qWtA
+        VqAO+Pl4DUFmNXf03yhltDV3Hfeuf3rSm6esqADEZ3ovqxzE5O/rNeyzI6uc15a5fomBR3zy0X57h7e+
+        4VhTZ7972wIZAUpHIM7R93kJDlh3WVvC/oVv+lDmc02FnCDjpy9argVyzpRFUyRttASCH/EYjpq74Psj
+        DKXukzVWsk5p2fMp985FQkqLLy4+76zpi28dP23RTdhybuCvXhD/s+qwuR92qLrBnCdp6i/T0gIxklsl
+        zU8gKzvsyZHEwD5sPwUxtOB1SXOif8ayjtTHT9kDAggZbZy/bYgm7wrK362tsa6WNAjkTAjgfdU7bHYc
+        CSGDyClYeaqJPKRAJZ0QVeGNn6sMt9f6Wqjtmqrb132yYognwtQ0mB/3La+sqsH8/AXzHhryiYTVobbP
+        6jLyEAuVXIhxlQvj1+oyFy5cX9TfVcvncsqgLI5EBVcqC9IWvQ9po0om5QDmPFv0/CefVYfMd2pC8dZJ
+        4Q2+TwtBHY1+5bIN9fRiGHl3vuCvDsc3a1/sa8hTnVWh9hmZ9cf/QWUVBG046pZbGM84Ze2HtMXdB9qo
+        kkk5UIxAPLb3vAYz5579YgUyaObPJy5em/OYouEKpCZkPpFRb8h8o2Lx2iEfwJAhkFB8oDK8IedJLV4o
+        kDImQyAN5r1yRs1jf4MAehjW5/qE4xFV1MUrkEmheHRSyKz3Gur9NnqPdgTmMe2HocpqVdxlOAKZdHv7
+        ZAjN1v7aqhaa85VLXjIEAkPbDleHN+R9PhUFUsZ4BZIvKOHzDe2DoPxfleySKZD2vLfrVjeY12s/lHkr
+        e24zHIFAdGu0b1Uo/qx+j+B/SbnkJVsgynZcOjfi+wgoCqSMKUYgF4faPuYGSCj+G5XsUqxABATn69oX
+        c5GMv6QuViAXz2+/UPdG8nrR4rWVeN2ty8pkWrn64gokFP8t9vmaLodeLWeZjECBlDHFCKRqQfwm7QPr
+        UMkuwxEIfPZq30sXxDPOxBUrEPREf6/9pCeRNLzertOqwuaPHcc8aIHg9VBNeOMUvKafaumkxd2HOWgo
+        kDLGK5CaUFudBMOgtdcieO7C5Pdg2se0qxrMP1dFXYoVCI7053qCsT/7FGtRAsEkHEf+X6X9TFvmIpIs
+        wyO04y2Vfhyizvu8Xa9AZHtSxkoG831sZ6w4pkDKmAyBFDTz9UmhjfWqWAZFCQRiQGC3uvWF4i+oHJdi
+        BCKT8ME6zCdUsgPq/Cedh+DPuC3YS7ZABOx742DZ+D4ZxqksCqScKVYgcmRFQG26IGtYJHgFgiB9FttR
+        r1WFzIdQdn9mfe1fVcVdihEI6tumfWTop5Id0LtNknam880jfqeSBT+ByLUZtH2nrhv1PKV7OAqkjEHA
+        uQJRAd3otSo56ofMXk+AvCmBqIo7iJ/OL8L6MV9wnmCfzVACqQxvqNX5CO7dSMpZa4a2mNpHTlOr5Az8
+        BCLIqgF81nd0eX0RkQIpYxBQQ07SBQTTP7tBEmpzVhxrihYIhlU1d2y8TBXLYSiBoCf6D52P9rwmbc+x
+        sNnt+oTMfX5LSfIJRKheGJ8jcxunDnURkQIpYySo9I9fSCATM071mi+rZAfU4R1ifQv1VGlDb3GvmxeO
+        v1s5/8FPq2I5FBKIXMiTybenrqKsKhzPuaGpkEAEpHsOBuZhOXnhblMg5UWxApFFep4gSapkB69Acibp
+        OIIj/wVP2e1X1G/y/QuyggIJxVe5dYTMIxLcBezX2hdDJudWAS/ILygQdULBvfg4eBaPAik7ihGIHL0R
+        lD9zgyTU9ojKcigoECDDKpk0u+UbzCaVlUE+gchk2y0fivdVLnqo8D+ESYCHzVd0XTXhDc6NaZohBQKw
+        /yrkHxisI20USJnhFQiOlK8gKLpdC5kW8n/jDRBYf82CdVep4g5DCURAYH3drQNj++pw+w0qyyWfQCCo
+        uwbLmu0quSAy1NNl8Fn+TSU7YHtIgQjY71T4uBcR02UokNOfxWvP1Pc3IJB2eANgKIMYorqsNqS5Z44K
+        XSisCps/9NT1JnqmG7z1IK1D51eF2hoG6zf36fTKUNuVqrqCyL0hCOa3pQza11cTbg+69YXj7znpQwhE
+        wPzDFZqyDl1PMSuHyRhElqwjaHLPAI2AXRRqn6F2k4MMleCzObtMsYYJ/zpVVVFAAHf51aMNwf+oci0I
+        hmsRv/J+S/8JIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQggh
+        hBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQggh
+        hBBCCCGEEEIIIYQQQgg5ASoq/h+EV1j8d1xqHAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
